# ArucoWithopencv

Example/: CMakeLists.txt
Example/src/: detect_marker.cpp  draw cube.cpp  filtering.cpp  generate_board.cpp  generate_marker.cpp  pose_estimation.cpp
